# basemind

./: .ai-rulez-generated.json  .gitignore  .goreleaser.yaml  .mcp.json  .pre-commit-config.yaml  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yaml  basemind.toml  deny.toml  gemini-extension.json  kimi.plugin.json  package.json  poly.toml
.agents/plugins/: marketplace.json
.ai-rulez/: config.toml
.ai-rulez/context/: code-style.md  crate-layout.md  harden-harness.md  inverted-index.md  mcp-surface.md  scanner-pipeline.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.cursor-plugin/hooks/: hooks.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml
.hermes/package/: pyproject.toml
.pi/extensions/: basemind.ts
crates/basemind-agent/: Cargo.toml
crates/basemind-agent-ipc/: Cargo.toml
crates/basemind-agent-ipc/src/: client.rs  error.rs  frame.rs  lib.rs  lifecycle.rs  server.rs  socket.rs
crates/basemind-agent-ipc/tests/: roundtrip.rs
crates/basemind-agent/examples/: headless.rs  scripted.rs
crates/basemind-agent/src/: command.rs  error.rs  event.rs  lib.rs  replay.rs  transport.rs
crates/basemind-agent/src/config/: mod.rs  role.rs
crates/basemind-agent/src/history/: mod.rs  persist.rs
crates/basemind-agent/src/model/: mock.rs  mod.rs
crates/basemind-agent/src/permission/: mod.rs  rule.rs
crates/basemind-agent/src/provider/: build.rs  mod.rs
crates/basemind-agent/src/room/: comms.rs  mod.rs
crates/basemind-agent/src/session/: mod.rs  runner.rs  stream_assembler.rs  turn.rs
crates/basemind-agent/src/tools/: codenav.rs  comms.rs  githist.rs  mod.rs  registry.rs  shell.rs
crates/basemind-agent/tests/: comms_room_hermetic.rs  comms_room_smoke.rs  e2e_scripted.rs  room_scripted.rs  transport_smoke.rs  turn_loop.rs
crates/basemind-tui/: Cargo.toml  README.md
crates/basemind-tui/src/: app.rs  config.rs  e2e.rs  main.rs  markdown.rs  run.rs  ui.rs
crates/basemind-tui/tests/: daemon_e2e.rs  pty_cancel_status.rs  pty_errors_resize.rs  pty_input.rs  pty_permission.rs  pty_render.rs  pty_replay.rs  pty_room.rs  pty_room_tools.rs  pty_room_ux.rs  pty_room_wake.rs
crates/basemind-tui/tests/common/: mod.rs
crates/lsp-positions/: Cargo.toml
crates/lsp-positions/src/: lib.rs
crates/stack-graphs/: Cargo.toml
crates/stack-graphs/src/: arena.rs  cycles.rs  debugging.rs  graph.rs  lib.rs  partial.rs  paths.rs  stats.rs  stitching.rs  utils.rs
crates/stack-graphs/tests/it/: arena.rs  can_create_graph.rs  can_find_local_nodes.rs  can_find_node_partial_paths_in_database.rs  can_find_partial_paths_in_file.rs  can_find_root_partial_paths_in_database.rs  can_jump_to_definition.rs  can_jump_to_definition_with_forward_partial_path_stitching.rs  cycles.rs  graph.rs  main.rs  partial.rs  stats.rs  stitching.rs  util.rs
crates/stack-graphs/tests/it/test_graphs/: class_field_through_function_parameter.rs  cyclic_imports_python.rs  cyclic_imports_rust.rs  mod.rs  sequenced_import_star.rs  simple.rs
crates/tree-sitter-graph/: Cargo.toml
crates/tree-sitter-graph/src/: ast.rs  checker.rs  execution.rs  functions.rs  graph.rs  lib.rs  parse_error.rs  parser.rs  variables.rs
crates/tree-sitter-graph/src/execution/: error.rs  lazy.rs  strict.rs
crates/tree-sitter-graph/src/execution/lazy/: statements.rs  store.rs  values.rs
crates/tree-sitter-graph/src/reference/: functions.rs  mod.rs
crates/tree-sitter-graph/tests/it/: execution.rs  functions.rs  graph.rs  lazy_execution.rs  main.rs  parse_errors.rs  parser.rs  variables.rs
crates/tree-sitter-stack-graphs/: Cargo.toml
crates/tree-sitter-stack-graphs/src/: functions.rs  lib.rs  util.rs
crates/tree-sitter-stack-graphs/tests/it/: builder.rs  edges.rs  main.rs  nodes.rs
docs/: ARCHITECTURE.md
npm-package/: install.js  package.json
opencode-plugin/: README.md  basemind.js  package.json
pip-package/: pyproject.toml
pip-package/basemind/: __init__.py  downloader.py
pip-package/tests/: test_downloader_platform.py
schema/: basemind-config-v1.schema.json
scripts/: codex-mcp-launch.mjs  harden.sh  mcp-launch.sh  package-release.sh  release-bump.sh  release-dry-run.sh  sync-plugin-skills.sh  sync-to-codex-plugin.sh  update-homebrew-formula.sh
src/: agent_cmd.rs  backpressure.rs  embeddings.rs  lib.rs  main.rs  path.rs  query.rs  render.rs  scanner.rs  scanner_code.rs  scanner_docs.rs  scanner_file.rs  store.rs  store_blob.rs  store_cache_admin.rs  store_gc.rs  store_gc_workspace.rs  store_layout.rs  sysres.rs  version.rs  watcher.rs
src/a2a/: mod.rs
src/cli/: admin.rs  codemap.rs  comms.rs  comms_daemon.rs  context.rs  git.rs  governance.rs  init.rs  init_rules.rs  memory.rs  mod.rs  registry.rs  render.rs  shells.rs  web.rs
src/comms/: client.rs  daemon.rs  daemon_handlers.rs  daemon_tests.rs  daemon_threads.rs  frontend_inproc.rs  frontend_named_pipe.rs  frontend_uds.rs  git_history_ops.rs  identity.rs  keys.rs  mod.rs  protocol.rs  scope.rs  singleton.rs  store.rs  workspace_pool.rs  workspace_pool_tests.rs
src/config/: code.rs  documents.rs  layered.rs  mod.rs  overrides.rs  resources.rs  v1.rs
src/extract/: doc.rs  locals.rs
src/git/: mod.rs  worktree.rs
src/git_history/: proto.rs  remote.rs
src/index/: keys.rs  keys_governance.rs  (+2 more)
tests/: agent_identity_smoke.rs  bug_13_cli.rs  bug_44_reembed_loop.rs  cache_paths.rs  cli_parity.rs  code_intel_smoke.rs  code_search_smoke.rs  comms_cli_smoke.rs  comms_idle_reap.rs  comms_smoke.rs  concurrency_smoke.rs  config_schema.rs  daemon_integration.rs  embed_streaming_smoke.rs  git_history_cli.rs  git_history_daemon.rs  git_history_serve.rs  git_history_share_smoke.rs  git_smoke.rs  goto_definition_xfile_smoke.rs  harden.rs  init_smoke.rs  max_lines.rs  mcp_smoke.rs  plugin_manifest_smoke.rs  precise_resolution_smoke.rs  property_smoke.rs  publish_workflow_smoke.rs  root_discovery_smoke.rs  scan_durability_smoke.rs  scan_smoke.rs  schema_bump.rs  worktree_smoke.rs
website/: astro.config.mjs  package-lock.json  package.json
(+105 files in other folders)
