[package]
name = "basemind-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Model-agnostic coding-agent engine built on the basemind code map + liter-llm."
publish = false

[dependencies]
async-trait = "0.1"
basemind = { path = "../..", default-features = false }
futures = "0.3"
globset = "0.4"
liter-llm = { version = "1.10.1", features = ["tower"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "process", "fs"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util", "sync"] }

[lints]
workspace = true
