[package]
name = "basemind-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Model-agnostic coding-agent engine built on the basemind code map + liter-llm."
publish = false

[features]
# Wires the real `CommsRoom` (a `RoomClient` over basemind's comms broker) in behind the root ~keep
# crate's `comms` feature. Off by default so the default build pulls in no broker/socket surface. ~keep
# Pulls in `tracing` (optional) only here — the incoming stream logs broker errors it swallows. ~keep
comms = ["basemind/comms", "dep:tracing"]
# Exposes the scripted test doubles (`MockModelClient`, `StallingModelClient`). Off by default so ~keep
# they never ship in a release build; the self-dev-dependency below turns it on for this crate's ~keep
# own tests (edition-2024 resolver keeps the dev-only feature out of normal builds). ~keep
test-util = []

[dependencies]
async-trait = "0.1"
basemind = { path = "../..", default-features = false }
futures = "0.3"
globset = "0.4"
liter-llm = { version = "1.10.1", features = ["tower"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "process", "fs"] }
# Optional: enabled only by the `comms` feature so the default build stays tracing-free. ~keep
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# Self-reference enabling `test-util` for this crate's test/example/bench targets (integration ~keep
# tests link the normally-built lib, which otherwise omits the feature-gated mocks). ~keep
basemind-agent = { path = ".", features = ["test-util"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util", "sync"] }

[lints]
workspace = true
