# This crate inherits `[workspace.lints]` from the root workspace via `[lints] workspace = true` ~keep
# once the integrating engineer adds `crates/basemind-tui` to the root `[workspace] members`. ~keep
[package]
name = "basemind-tui"
version = "0.22.3"
edition = "2024"
license = "MIT"
description = "Ratatui terminal front-end for the basemind-agent engine."
publish = false

[[bin]]
name = "basemind-tui"
path = "src/main.rs"

[features]
# Enables `--replay <scenario.json>`: drives the UI with a scripted model (no network / no key) by ~keep
# turning on the engine's `test-util` seam. Off by default so scripted mocks never ship in the binary. ~keep
replay = ["basemind-agent/test-util"]
# Enables the live multi-agent room: connect a `CommsRoom` (basemind-agent's comms-broker adapter) and ~keep
# attach it to the live session. Off by default so the binary needs no broker/socket at runtime. ~keep
room = ["basemind-agent/comms"]

[dependencies]
anyhow = "1"
basemind = { path = "../..", default-features = false }
basemind-agent = { path = "../basemind-agent" }
basemind-agent-ipc = { path = "../basemind-agent-ipc" }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
# `unstable-rendered-line-info` exposes `Paragraph::line_count`, used to measure the wrapped ~keep
# transcript height so the viewport can pin to the newest line (ratatui #293). ~keep
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "1"

[dev-dependencies]
# Real-terminal (PTY) end-to-end harness for the `pty_replay` test (gated behind `replay`): ~keep
# spawn the binary under a pseudo-terminal, parse its ANSI output into a screen grid, drive keys. ~keep
portable-pty = "0.9"
tempfile = "3"
# Pinned to the 0.15 line on purpose: 0.16 needs `unicode-width ^0.2.1`, which conflicts with ~keep
# `ratatui 0.29`'s `unicode-width =0.2.0` pin and fails to resolve. Do not bump. ~keep
vt100 = "0.15"

[lints]
workspace = true
