# License: MIT OR Apache-2.0 (see LICENSE-MIT / LICENSE-APACHE — upstream copyright retained).
[package]
name = "lsp-positions"
version = "0.3.4"
description = "LSP-compatible character positions (maintained basemind fork, tree-sitter 0.26 port)"
homepage = "https://github.com/Goldziher/basemind"
repository = "https://github.com/Goldziher/basemind"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
edition = "2024"
publish = false

[lib]
test = false

[features]
bincode = ["dep:bincode"]
tree-sitter = ["dep:tree-sitter"]

[dependencies]
bincode = { version = "3.0.0", optional = true }
memchr = "2.8"
serde = { version = "1", features = ["derive"], optional = true }
tree-sitter = { version = "0.26", optional = true }
unicode-segmentation = { version = "1.13" }

[lints]
workspace = true
