# License: MIT OR Apache-2.0 (see LICENSE-MIT / LICENSE-APACHE — upstream copyright retained).
[package]
name = "basemind-stack-graphs"
version = "0.14.1"
description = "Name binding for arbitrary programming languages (maintained basemind fork)"
homepage = "https://github.com/Goldziher/basemind"
repository = "https://github.com/Goldziher/basemind"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
edition = "2024"

[lib]
name = "stack_graphs"
test = false

[features]
copious-debugging = []

[dependencies]
ahash = "0.8"
bitvec = "1.1.1"
controlled-option = "0.4.1"
either = "1.16"
enumset = "1.1"
fxhash = "0.2"
itertools = "0.15"
lsp-positions = { package = "basemind-lsp-positions", version = "0.3.4", path = "../lsp-positions" }
smallvec = { version = "1.15", features = ["union"] }
thiserror = "2"

[dev-dependencies]
maplit = "1.0"
pretty_assertions = "1"

[lints]
workspace = true

[[test]]
name = "it"
path = "tests/it/main.rs"
