# License: MIT OR Apache-2.0 (see LICENSE-MIT / LICENSE-APACHE — upstream copyright retained).
[package]
name = "basemind-tree-sitter-graph"
version = "0.12.0"
description = "Construct graphs from parsed source code (maintained basemind fork, tree-sitter 0.26 port)"
homepage = "https://github.com/Goldziher/basemind"
repository = "https://github.com/Goldziher/basemind"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
edition = "2024"

[lib]
name = "tree_sitter_graph"
test = false

[dependencies]
log = "0.4"
regex = "1.13.1"
serde = "1.0"
serde_json = "1.0"
smallvec = { version = "1.15", features = ["union"] }
streaming-iterator = "0.1.9"
thiserror = "2"
tree-sitter = "0.26"

[dev-dependencies]
env_logger = "0.11"
indoc = "2.0"
tree-sitter-python = "=0.23.5"

[lints]
workspace = true

[[test]]
name = "it"
path = "tests/it/main.rs"
